<resources>
    <string name="app_name">Authorization</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login_btn">Log in</string>
    <string name="wrong_input_textview">Wrong login or password</string>
    <string name="login">Login</string>
    <string name="textview">Hello!</string>
    <string name="start_creating">Start creating!</string>
    <string name="log_out">Log out</string>
    <string name="generate">Generate</string>
    <string name="view">View</string>
    <string name="clean">Clean</string>
</resources>