<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context=".GroupGeneratorFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate" />

        <Button
            android:id="@+id/button_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view" />

        <Button
            android:id="@+id/button_clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clean" />

        <TextView
            android:id="@+id/textView_dbData"
            android:layout_width="match_parent"
            android:layout_height="525dp"
            android:text="" />
    </LinearLayout>

</FrameLayout>